# bluerov_ffg

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: brov.rviz  brov.yaml  brov_depth.yaml  brov_pid.yaml  brov_thrusters.yaml
launch/: .spawn.launch.kate-swp  PoseStamped.yaml  Thrusters.yaml  Velocity.yaml  VelocityDepth.yaml  apm.launch  brov.launch  depth_cmd.launch  gazebo.launch  rviz.launch  spawn.launch  teleop.launch  thruster_cmd.launch  uwsim.launch  velocity_cmd.launch
mesh/: brov-redux2.stl
scenes/: brov.xml
scripts/: rviz_bridge.py
urdf/: brov.xacro  brov2.xacro  brov2_macro.xacro  brov2_uwsim.urdf  brov_dummy.urdf  brov_uwsim.urdf
